DuPont DevSB/src/objects/ccrz__E_Content__c.object
<CustomObject>
    <description>Content object to display main home page, faq, etc. based on the Storefront and Locale. Very similar to Custom Labels with a larger body of text.</description>
    <fields>
        <fullName>ccrz__ContentBody__c</fullName>
        <description>The HTML for this particular E_Content object</description>
        <label>Content Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__ContentID__c</fullName>
        <description>ID for this particular E_Content object.  ID should describe what this content object represents.  E.g. body for home page body, faq for FAQ link, etc.  There can be multiple objects with the same ID, but must be unique across the storefront/locale.</description>
        <label>Content ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <label>Locale</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>The E_Storefront this content object represents</description>
        <label>Storefront</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DefaultStore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CC Content</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__ContentID__c</columns>
        <columns>ccrz__Locale__c</columns>
        <columns>ccrz__Storefront__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>